--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -34,3 +34,27 @@ body {
         padding-right: 4rem;
     }
 }
+
+/* idk */
+.model-wrapper {
+    position: relative;
+    height: calc(100vh - 66px);
+    overflow: hidden;
+}
+
+
+
+.axis-control{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+}
+
+
+.north-arrow-control{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+}
