--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $primary-color: #154780;
 $secondary-color: #322b59;
 $secondary-color--transparent: #322b59ca;
-$textColor: #f0f0f0;
+$textColor: #000000;
+$paper: #f6f6f6;
 
 $errors: red;
 $success: rgb(15, 167, 15);
