--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background: transparent;
+    background: $primary-color;
     transition: all 0.3s ease;
     z-index: 9998;
 }
@@ -94,7 +94,7 @@
     transition: all 0.2s ease;
     height: 100%;
     width: 100%;
-    background: $dark;
+    background: $primary-color;
     ul {
         flex-direction: column;
         width: 100%;
