--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import './components/header';
 @import './components/welcomeSection';
 @import './components/form';
+@import './components/terrainModel';
