--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,10 +1,11 @@
-$primary-color: #154780;
-$secondary-color: #322b59;
-$secondary-color--transparent: #322b59ca;
-$textColor: #000000;
+$primary-color: #333c44;
+$primary-color--darker: #11161c;
+$secondary-color: #2EEBC9;
+$textColor: #fff;
+$white: #fff;
 $paper: #f6f6f6;
 
-$errors: red;
-$success: rgb(15, 167, 15);
+$errors: #d81212;
+$success: rgb(25, 182, 25);
 
 $max-container-width: 1650px;
