--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -1,7 +1,8 @@
 .header {
-    background: $primary-color;
+    background: transparent;
     transition: all 0.3s ease;
     z-index: 9998;
+    color: $white;
 }
 
 .header.header--scroll {
@@ -12,7 +13,7 @@
     height: 3rem;
     transition: all 0.3s ease;
     @media only screen and (min-width: 1450px) {
-        height: 5rem;
+        height: 4rem;
     }
 }
 
@@ -44,7 +45,7 @@
 }
 
 .header__mobile-lines {
-    background: $textColor;
+    background: $white;
     height: 1.25px;
     width: 27px;
     position: relative;
@@ -53,7 +54,7 @@
 
 .header__mobile-lines::before, .header__mobile-lines::after {
     height: 1.25px;
-    background: $textColor;
+    background: $white;
     z-index: 10000;
     border-radius: 5px;
     transition: all 0.5s ease-in-out;
@@ -139,9 +140,9 @@
     text-transform: uppercase;
     position: relative;
     transition: all 0.5s ease;
-    font-size: 23px;
+    font-size: 22px;
     @media only screen and (min-width: 1450px) {
-        padding-bottom: 8px;
+        padding-bottom: 6px;
         font-size: 18px;
         &::before {
             content: "";
@@ -176,8 +177,8 @@
     }
 
     & svg {
-        width: 31px !important;
-        height: 31px !important;
+        width: 28px !important;
+        height: 28px !important;
         vertical-align: middle;
     }
 
