--- a/client/src/styles/components/_welcomeSection.scss
+++ b/client/src/styles/components/_welcomeSection.scss
@@ -2,11 +2,12 @@
     width: 100%;
     height: 100vh;
     max-height: 1024px;
-    //background-image: url('../../../assets/main-bg.jpg');
-    //background-size: cover;
-    //background-repeat: no-repeat;
-    //background-position: center;
+    background-image: url('../../assets/images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
     position: relative;
+    z-index: 1;
 
     &::after {
         content: "";
@@ -15,7 +16,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: $secondary-color--transparent;
+        background-color: #00000052;
     }
 }
 
