--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -4,11 +4,8 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    background-color: $secondary-color;
-    background-color: white;
+    color: $textColor;
+    background-color: $primary-color--darker;
 }
 
 .page-section {
@@ -36,26 +33,74 @@ body {
     }
 }
 
-/* idk */
-.model-wrapper {
+.secondary-button {
     position: relative;
-    height: calc(100vh - 66px);
-    overflow: hidden;
+    color: #fff;
+    padding: 6px 30px;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 15px;
+    transition: all 0.4s ease;
+    @media only screen and (min-width: 768px) {
+        font-size: 16px;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: $secondary-color;
+        transform: skewX(-25deg);
+        z-index: -1;
+        transition: all 0.4s ease;
+    }
+
+    &:hover {
+        &::before {
+            background-color: $secondary-color;
+            transform: skewX(0deg);
+        }
+    }
 }
 
-
-
-.axis-control{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
+.primary-button {
+    background-color: $secondary-color;
+    color: #fff;
+    padding: 8px 26px;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.4s ease;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 16px;
+    @media only screen and (min-width: 768px) {
+        font-size: 18px;
+    }
+    &:hover {
+        background-color: $secondary-color;
+    }
 }
 
-
-.north-arrow-control{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 2;
+input:focus,
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:active,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:active,
+textarea:-webkit-autofill:focus,
+select:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:active,
+select:-webkit-autofill:focus,
+input:-internal-autofill-selected{
+  transition: background-color 5000s ease-in-out 0s;
+  outline: none !important;
+  -webkit-box-shadow: 0 0 0 30px rgba(51, 60, 68, 0.646) inset !important;
 }
