huge profile update

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #333c44;
-$primary-color--darker: #11161c;
+$primary-color: #11161c;
+$primary-color--lighter: #141a20;
 $secondary-color: #2EEBC9;
 $textColor: #fff;
 $white: #fff;
