--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -10,3 +10,6 @@
 @import './components/welcomeSection';
 @import './components/form';
 @import './components/terrainModel';
+@import './components/table';
+@import './components/profileAside';
+@import './components/buttons';
