--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -5,7 +5,17 @@ html, body {
     padding: 0;
     box-sizing: border-box;
     color: $textColor;
-    background-color: $primary-color--darker;
+    background-color: $primary-color--lighter;
+}
+
+h1 {
+    font-size: 44px;
+    line-height: 1.5;
+    font-weight: 800;
+    text-transform: uppercase;
+    @media only screen and (min-width: 1024px) {
+        font-size: 60px;
+    }
 }
 
 .page-section {
