another bulk update

--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -1,23 +1,25 @@
 .form {
-    width: 40rem;
-    height: fit-content;
-    color: $textColor;
-    background: $paper;
-    border-radius: 10px;
-    background: rgba(51, 60, 68, 0.5411764705882353);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
-    backdrop-filter: blur(6.1px);
-    -webkit-backdrop-filter: blur(6.1px);
-    border: 1px solid rgba(51, 60, 68, 0.4);
-
-    margin-top: 96px;
-    margin-bottom: 96px;
-    @media only screen and (min-width: 1450px) {
-        margin-top: 128px;
-        margin-bottom: 128px;
-    }
-    @media (max-width: 900px) {
-        width: 100%;
+    &--standalone {
+        width: 40rem;
+        height: fit-content;
+        color: $textColor;
+        background: $paper;
+        border-radius: 10px;
+        background: rgba(51, 60, 68, 0.5411764705882353);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
+        backdrop-filter: blur(6.1px);
+        -webkit-backdrop-filter: blur(6.1px);
+        border: 1px solid rgba(51, 60, 68, 0.4);
+    
+        margin-top: 96px;
+        margin-bottom: 96px;
+        @media only screen and (min-width: 1450px) {
+            margin-top: 128px;
+            margin-bottom: 128px;
+        }
+        @media (max-width: 900px) {
+            width: 100%;
+        }
     }
 }
 
