--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -13,3 +13,9 @@
 @import './components/table';
 @import './components/profileAside';
 @import './components/buttons';
+@import './components//profile';
+@import './components/loading';
+@import './components/toolbar';
+
+//pages
+@import './pages/errorPage';
