--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,98 +1,135 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: $textColor;
-    background-color: $primary-color--lighter;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: $textColor;
+  background-color: $primary-color--lighter;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $primary-color--lighter;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $secondary-color;
+    border-radius: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: lighten($secondary-color, 5%);
+  }
 }
 
 h1 {
-    font-size: 44px;
-    line-height: 1.5;
-    font-weight: 800;
-    text-transform: uppercase;
-    @media only screen and (min-width: 1024px) {
-        font-size: 60px;
-    }
+  font-size: 44px;
+  line-height: 1.5;
+  font-weight: 800;
+  text-transform: uppercase;
+  @media only screen and (min-width: 1024px) {
+    font-size: 60px;
+  }
 }
 
 .page-section {
-    width: 100%;
-    margin-bottom: 4rem;
-    @media only screen and (min-width: 768px) {
-        margin-bottom: 6rem;
-    }
-    @media only screen and (min-width: 1024px) {
-        margin-bottom: 10rem;
-    }
+  width: 100%;
+  margin-bottom: 4rem;
+  @media only screen and (min-width: 768px) {
+    margin-bottom: 6rem;
+  }
+  @media only screen and (min-width: 1024px) {
+    margin-bottom: 10rem;
+  }
 }
 
 .page-section .page-section__container {
-    height: 100%;
-    width: 100%;
-    max-width: $max-container-width;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    @media only screen and (min-width: 768px) {
-        padding-left: 4rem;
-        padding-right: 4rem;
-    }
+  height: 100%;
+  width: 100%;
+  max-width: $max-container-width;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  @media only screen and (min-width: 768px) {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
 
-.secondary-button {
-    position: relative;
-    color: #fff;
-    padding: 6px 30px;
-    border: none;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 15px;
+.presentation-button {
+  position: relative;
+  color: #fff;
+  padding: 6px 30px;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 15px;
+  transition: all 0.4s ease;
+  @media only screen and (min-width: 768px) {
+    font-size: 16px;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $secondary-color;
+    transform: skewX(-25deg);
+    z-index: -1;
     transition: all 0.4s ease;
-    @media only screen and (min-width: 768px) {
-        font-size: 16px;
-    }
+  }
 
+  &:hover {
     &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: $secondary-color;
-        transform: skewX(-25deg);
-        z-index: -1;
-        transition: all 0.4s ease;
+      background-color: $secondary-color;
+      transform: skewX(0deg);
     }
-
-    &:hover {
-        &::before {
-            background-color: $secondary-color;
-            transform: skewX(0deg);
-        }
-    }
+  }
 }
 
 .primary-button {
+  background-color: $secondary-color;
+  color: #fff;
+  padding: 8px 26px;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  @media only screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+  &:hover {
     background-color: $secondary-color;
-    color: #fff;
-    padding: 8px 26px;
-    border: none;
-    border-radius: 5px;
-    transition: all 0.4s ease;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 16px;
-    @media only screen and (min-width: 768px) {
-        font-size: 18px;
-    }
-    &:hover {
-        background-color: $secondary-color;
-    }
+  }
+}
+
+.secondary-button {
+  background-color: transparent;
+  color: $secondary-color;
+  border: 2px solid $secondary-color;
+  padding: 8px 26px;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  @media only screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+  &:hover {
+    color: darken($secondary-color, 5%);
+    border-color: darken($secondary-color, 5%);
+  }
 }
 
 input:focus,
@@ -109,7 +146,7 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:active,
 select:-webkit-autofill:focus,
-input:-internal-autofill-selected{
+input:-internal-autofill-selected {
   transition: background-color 5000s ease-in-out 0s;
   outline: none !important;
   -webkit-box-shadow: 0 0 0 30px rgba(51, 60, 68, 0.646) inset !important;
