--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import './components//profile';
 @import './components/loading';
 @import './components/toolbar';
+@import './components/areaSelect';
 
 //pages
 @import './pages/errorPage';
