--- a/client/src/styles/components/_areaSelect.scss
+++ b/client/src/styles/components/_areaSelect.scss
@@ -1,22 +1,35 @@
-/*.leaflet-areaselect-shade {
-    position: absolute;
-    background: rgba(0,0,0, 0.4);
+.leaflet-areaselect-shade {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
 }
 .leaflet-areaselect-handle {
-    position: absolute;
-    background: #fff;
-    border: 1px solid #666;
-    -moz-box-shadow: 1px 1px rgba(0,0,0, 0.2);
-    -webkit-box-shadow: 1px 1px rgba(0,0,0, 0.2);
-    box-shadow: 1px 1px rgba(0,0,0, 0.2);
-    width: 14px;
-    height: 14px;
-    cursor: move;
-}*/
+  position: absolute;
+  background: #fff;
+  border: 1px solid #666;
+  -moz-box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  width: 14px;
+  height: 14px;
+  cursor: move;
+}
 
 .leaflet-marker-icon {
-    width: 40px;
-    height: 40px;
-    background-color: $secondary-color;
-    border: 1px solid $primary-color;
+  background-color: $secondary-color;
+  border: 1px solid $primary-color;
+}
+
+#map {
+  height: calc(100vh - 64px);
+}
+.btns-wrapper {
+    display: flex;
+    gap: 2rem;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 1000;
+}
+.btn-wrapper {
+  padding: 5px;
 }
