real data from api

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -20,6 +20,6 @@
 @import './components/loading';
 @import './components/toolbar';
 @import './components/areaSelect';
-
+@import './components/confirmDialog';
 //pages
 @import './pages/errorPage';
