--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -20,5 +20,6 @@
 @import './components/toolbar';
 @import './components/areaSelect';
 @import './components/confirmDialog';
+@import './components/leafletMap';
 //pages
 @import './pages/errorPage';
