--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -20,7 +20,6 @@
 html,
 body {
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -60,6 +59,20 @@ h1 {
   @media only screen and (min-width: 768px) {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+
+.offset-from-nav {
+  margin-top: 64px;
+  @media only screen and (min-width: 1450px) {
+    margin-top: 80px;
+  }
+}
+
+.fullscreen-with-nav {
+  height: calc(100vh - 64px);
+  @media only screen and (min-width: 1450px) {
+    height: calc(100vh - 80px);
   }
 }
 
