--- a/client/src/styles/components/_toolbar.scss
+++ b/client/src/styles/components/_toolbar.scss
@@ -1,20 +1,29 @@
 .toolbar {
+  position: fixed;
+  left: 0;
+  top: 64px;
+  bottom: 0;
+  z-index: 9999;
+  display: flex;
+
+  @media only screen and (min-width: 1450px) {
+    top: 80px;
+  }
+
   &__content {
     display: none;
   }
 
   &__container {
-    height: 100vh;
     width: 0px;
     transition: all 0.4s ease;
     padding: 0;
-    z-index: 1000;
-    background: rgba(51, 60, 68, 0.5411764705882353);
+    background: rgba(51, 60, 68, 0.8);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
     backdrop-filter: blur(6.1px);
     -webkit-backdrop-filter: blur(6.1px);
     border: 1px solid rgba(51, 60, 68, 0.4);
-    overflow-y: auto;
+    //overflow-y: auto;
     &::-webkit-scrollbar {
       width: 6px;
     }
@@ -35,7 +44,7 @@
       width: 80vw;
 
       @media only screen and (min-width: 768px) {
-        width: 400px;
+        width: 300px;
       }
 
       padding: 2rem 1rem;
@@ -47,8 +56,8 @@
 
   &__arrow-panel {
     width: 20px;
-    height: 100vh;
-    background: rgba(51, 60, 68, 0.5411764705882353);
+    //height: 100%;
+    background: rgba(51, 60, 68, 0.8);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.511);
     backdrop-filter: blur(6.1px);
     -webkit-backdrop-filter: blur(6.1px);
