--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -21,5 +21,6 @@
 @import './components/areaSelect';
 @import './components/confirmDialog';
 @import './components/leafletMap';
+@import './components/searchbox';
 //pages
 @import './pages/errorPage';
