--- a/client/src/styles/components/_toolbar.scss
+++ b/client/src/styles/components/_toolbar.scss
@@ -12,13 +12,49 @@
 
   &__content {
     display: none;
+    .form p {
+      font-size: 16px;
+    }
+    .form input {
+      transition: background-color 5000s ease-in-out 0s;
+      outline: none !important;
+      -webkit-box-shadow: 0 0 0 30px rgba(51, 60, 68, 0.646) inset !important;
+    }
+
+    .pins-container {
+      display: flex;
+      flex-direction: row;
+      gap: 0.25rem;
+      padding: 0.5rem;
+      background: rgba(51, 60, 68, 0.88);
+      border-radius: $border-radius;
+      box-shadow: 0px 0px 1px $secondary-color;
+      & > div {
+        width: 50px;
+        height: 50px;
+        padding: 0.25rem;
+        border-radius: $border-radius;
+        //background: lighten($primary-color--lighter, 10%);
+        background: rgba(42, 50, 57, 0.99);
+        border: 1px solid lighten($primary-color--lighter, 15%);
+        box-shadow: 0px 0px 3px lighten($primary-color--lighter, 15%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.4s ease;
+        &:hover {
+          border: 1px solid lighten($primary-color--lighter, 25%);
+          box-shadow: 0px 0px 3px lighten($primary-color--lighter, 25%);
+        }
+      }
+    }
   }
 
   &__container {
     width: 0px;
     transition: all 0.4s ease;
     padding: 0;
-    background: rgba(51, 60, 68, 0.8);
+    background: rgba(51, 60, 68, 0.9);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
     backdrop-filter: blur(6.1px);
     -webkit-backdrop-filter: blur(6.1px);
