fixed displaying gpx trail + more refactoring

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -22,5 +22,6 @@
 @import './components/confirmDialog';
 @import './components/leafletMap';
 @import './components/searchbox';
+@import './components/popupWindow';
 //pages
 @import './pages/errorPage';
