--- a/client/src/styles/components/_toolbar.scss
+++ b/client/src/styles/components/_toolbar.scss
@@ -3,7 +3,7 @@
   left: 0;
   top: 64px;
   bottom: 0;
-  z-index: 9999;
+  z-index: 9998;
   display: flex;
 
   @media only screen and (min-width: 1450px) {
@@ -24,34 +24,6 @@
       height: 36px;
       font-size: 15px;
       font-weight: 300;
-    }
-
-    .pins-container {
-      display: flex;
-      flex-direction: row;
-      gap: 0.25rem;
-      padding: 0.5rem;
-      background: rgba(51, 60, 68, 0.88);
-      border-radius: $border-radius;
-      box-shadow: 0px 0px 1px $secondary-color;
-      & > div {
-        width: 50px;
-        height: 50px;
-        padding: 0.25rem;
-        border-radius: $border-radius;
-        //background: lighten($primary-color--lighter, 10%);
-        background: rgba(42, 50, 57, 0.99);
-        border: 1px solid lighten($primary-color--lighter, 15%);
-        box-shadow: 0px 0px 3px lighten($primary-color--lighter, 15%);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: all 0.4s ease;
-        &:hover {
-          border: 1px solid lighten($primary-color--lighter, 25%);
-          box-shadow: 0px 0px 3px lighten($primary-color--lighter, 25%);
-        }
-      }
     }
   }
 
@@ -127,6 +99,37 @@
 
     &--opened {
       transform: rotateY(-180deg);
+    }
+  }
+}
+
+.pins-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.25rem;
+  padding: 0.5rem;
+  background: rgba(51, 60, 68, 0.88);
+  border-radius: $border-radius;
+  box-shadow: 0px 0px 1px $secondary-color;
+  & > div {
+    width: 50px;
+    height: 50px;
+    padding: 0.25rem;
+    border-radius: $border-radius;
+    //background: lighten($primary-color--lighter, 10%);
+    background: rgba(42, 50, 57, 0.99);
+    border: 1px solid lighten($primary-color--lighter, 15%);
+    box-shadow: 0px 0px 3px lighten($primary-color--lighter, 15%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s ease;
+    &:hover {
+      border: 1px solid lighten($primary-color--lighter, 25%);
+      box-shadow: 0px 0px 3px lighten($primary-color--lighter, 25%);
+    }
+    &.active {
+      background: darken($secondary-color, 15%);
     }
   }
 }
