more combined updated - overpass, fit and model movement

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -23,5 +23,6 @@
 @import './components/leafletMap';
 @import './components/searchbox';
 @import './components/popupWindow';
+@import './components/mapTourPanel';
 //pages
 @import './pages/errorPage';
