--- a/client/src/styles/components/_mapTourPanel.scss
+++ b/client/src/styles/components/_mapTourPanel.scss
@@ -2,15 +2,65 @@
   &__panel {
     position: absolute;
     z-index: 9999;
-    top: 6rem;
-    right: 1rem;
-    padding: 1rem 2rem;
+    top: 0.5rem;
+    right: 0.5rem;
     background: rgba(51, 60, 68, 0.768);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
-    backdrop-filter: blur(6.1px);
-    -webkit-backdrop-filter: blur(6.1px);
-    border: 1px solid rgba(51, 60, 68, 0.4);
     border-radius: 5px;
+    transition: padding 0.2s ease;
+
+    &--active {
+      padding: 1rem 2rem;
+      right: 1rem;
+      top: 1rem;
+      border: 1px solid rgba(51, 60, 68, 0.4);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
+      backdrop-filter: blur(6.1px);
+      -webkit-backdrop-filter: blur(6.1px);
+    }
+  }
+
+  &__trail-button {
+    background-color: rgba(51, 60, 68, 0.768);
+    color: $secondary-color;
+    padding: 8px 22px;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.4s ease;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1;
+    @media only screen and (min-width: 768px) {
+      font-size: 16px;
+    }
+    &:hover {
+      color: $white;
+      background-color: $primary-color--lighter;
+    }
+  }
+
+  &__minimize {
+    width: 24px;
+    height: 22px;
+    background-color: rgba(51, 60, 68, 0.99);
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    border-radius: 5px;
+    cursor: pointer;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: 4px;
+      width: 16px;
+      height: 4px;
+      border-radius: $border-radius;
+      background-color: $white;
+      z-index: 1000;
+      transform: translateY(-50%);
+    }
   }
 
   &__controls {
@@ -29,6 +79,15 @@
 
     &--active {
       fill: $white;
+    }
+  }
+}
+
+.offset-from-nav {
+  .map-tour__panel {
+    top: 5.5rem;
+    &--active {
+      top: 6rem;
     }
   }
 }
