--- a/client/src/styles/components/_confirmDialog.scss
+++ b/client/src/styles/components/_confirmDialog.scss
@@ -1,19 +1,10 @@
 .confirm-dialog {
-    min-width: 300px;
-    left: 50%;
-    top: 60%;
-    z-index: -9999;
-    transform: translate(-50%);
-    background: rgba(51, 60, 68, 0.5411764705882353);
+    background: rgb(51, 60, 68);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.511);
     backdrop-filter: blur(6.1px);
     -webkit-backdrop-filter: blur(6.1px);
     border: 1px solid rgba(51, 60, 68, 0.4);
-
-    &--opened {
-        top: 50%;
-        z-index: 9999;
-    }
+    border-radius: $border-radius;
 }
   
 .confirm-dialog__title {
@@ -27,6 +18,7 @@
     .confirm-dialog__button {
         &--primary {
             background-color: $secondary-color;
+            border: 2px solid $secondary-color;
             color: #fff;
             border-radius: 5px;
             transition: all 0.4s ease;
