--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -24,5 +24,6 @@
 @import './components/searchbox';
 @import './components/popupWindow';
 @import './components/mapTourPanel';
+@import './components/mapPinsList';
 //pages
 @import './pages/errorPage';
