--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -138,6 +138,25 @@ h2 {
   }
 }
 
+.delete-button {
+  color: $white;
+  background-color: $errors;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 8px 26px;
+  @media only screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+
+  &:hover {
+      background-color: lighten($errors, 15%);
+  }
+}
+
 .secondary-button {
   background-color: transparent;
   color: $secondary-color;
