resolving issue from 13.03.2024 - part2

--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -182,11 +182,11 @@ h2 {
   border-radius: 20px;
 }
 
-input:focus,
+//input:focus,
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:active,
-input:-webkit-autofill:focus,
+//input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
 textarea:-webkit-autofill:active,
