--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -363,11 +363,11 @@ input[type="number"] {
 
 .form {
   input,
-  input:focus,
+  //input:focus,
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:active,
-  input:-webkit-autofill:focus,
+  //input:-webkit-autofill:focus,
   textarea:-webkit-autofill,
   textarea:-webkit-autofill:hover,
   textarea:-webkit-autofill:active,
