removing navigation from map and model pages

--- a/client/src/styles/components/_leafletMap.scss
+++ b/client/src/styles/components/_leafletMap.scss
@@ -1,16 +1,6 @@
 .leaflet-map {
-  &__container {
-    margin-top: 64px;
-    @media only screen and (min-width: 1450px) {
-      margin-top: 80px;
-    }
-  }
-
   &__map {
-    height: calc(100vh - 64px);
+    height: 100vh;
     margin-left: 20px;
-    @media only screen and (min-width: 1450px) {
-      height: calc(100vh - 80px);
-    }
   }
 }
