import POIs popup

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -25,5 +25,6 @@
 @import './components/popupWindow';
 @import './components/mapTourPanel';
 @import './components/mapPinsList';
+@import './components/customReactSelect';
 //pages
 @import './pages/errorPage';
