--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -351,6 +351,8 @@ input[type='number'] {
     z-index: 10;
     cursor: pointer;
     padding: 0 1rem;
+    overflow: hidden;
+    white-space: nowrap;
   }
   input[type='file'] {
     position: absolute;
