complex refactoring of model

--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -1,5 +1,7 @@
 .form {
   &--standalone {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
     width: 40rem;
     height: fit-content;
     color: $textColor;
