--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -365,6 +365,14 @@ input[type='number'] {
   }
 }
 
+.form .subsection-title {
+  font-size: 15px;
+  font-weight: 500;
+  @media only screen and (min-width: 1024px) {
+    font-size: 16px;
+  }
+}
+
 .form {
   input,
   //input:focus,
