--- a/client/src/styles/components/_mapPinsList.scss
+++ b/client/src/styles/components/_mapPinsList.scss
@@ -9,6 +9,8 @@
   box-shadow: 0px 0px 1px $secondary-color;
   max-height: 300px;
   overflow-y: auto;
+  margin-left: 1px;
+  margin-right: 1px;
 
   &__item {
     display: grid;
