--- a/client/src/styles/components/_mapPinsList.scss
+++ b/client/src/styles/components/_mapPinsList.scss
@@ -5,7 +5,7 @@
   gap: 0.25rem;
   padding: 0.5rem;
   background: rgba(51, 60, 68, 0.88);
-  border-radius: $border-radius;
+  border-radius: 4px;
   box-shadow: 0px 0px 1px $secondary-color;
   max-height: 300px;
   overflow-y: auto;
