--- a/client/src/styles/components/_toolbar.scss
+++ b/client/src/styles/components/_toolbar.scss
@@ -122,7 +122,7 @@
     width: 50px;
     height: 50px;
     padding: 0.25rem;
-    border-radius: $border-radius;
+    border-radius: 4px;
     //background: lighten($primary-color--lighter, 10%);
     background: rgba(42, 50, 57, 0.99);
     border: 1px solid lighten($primary-color--lighter, 15%);
@@ -142,7 +142,7 @@
 
   .subsection-title {
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     @media only screen and (min-width: 1024px) {
       font-size: 15px;
     }
