--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -366,10 +366,10 @@ input[type='number'] {
 }
 
 .form .subsection-title {
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 13px !important;
+  font-weight: 400 !important;
   @media only screen and (min-width: 1024px) {
-    font-size: 16px;
+    font-size: 14px !important;
   }
 }
 
